Fix image not showing bug

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ div {
     width: 50px;
     margin: 0 5px;
     border-radius: 10px;
+    cursor: pointer;
+    transition: box-shadow 0.5s;
     
 }
 .card-icons:hover {box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}
@@ -46,8 +48,11 @@ input {
     border: none;
     border-radius: 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    cursor: pointer;
+    transition: box-shadow 0.5s;
+    
 }
-.button:hover {border: 1px solid black;}
+.button:hover {box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}
 
 #result {
     font-family: consolas;
